
PEP8ed pup_photom.py and got it working.

*****

Tweaked README file.


*****  Do 25. Mär 11:46:27 CET 2021  *****

PEP8ed image module.
Added image module into main package.

*****

PEP8ed pup_model.py.
Got light-curve fitting and retrieval running.

*****

Updated docs adding getting started and draft of WASP43b eclipse
worked example.

*****

Added pup_marker.py with code to enable pup matplotlib markers.
Updated getting started with pup-marker example.
Moved all figures to puppies/docs/figures/ folder.

*****

PEP8ed a bunch of files.
Updated copyright headers.

*****

Updated Makefile (do I even need this file anymore [question mark])

*****

Bumped puppies version to 0.2.0.


*****  Fr 26. Mär 10:22:20 CET 2021  *****

Updated MANIFEST.in file.

*****

Updated setup.py, set lon_description text, set name to exo_puppies
(since puppies is already taken on PyPI), and updated email.

*****

Retracted puppies version to 0.2.0a1 (to align with PyPI release).

*****

Updated pyproject.toml file to consider python>3.7 versions.


*****  Do 24. Feb 14:05:15 CET 2022  *****

Updated requirements.

*****

Updated pyproject.toml to use oldest-supported-numpy dependency.

*****

Added .travis.yml file.

*****

Added .gitignore in puppies/lib/
Removed Makefile.

*****

Updated version.py file and setup.py.

*****

Fixed bug with version.py filename.

*****

Renamed gauss.c to _gauss.c

*****

Prevented deprecation warning with
scipy.ndimage.interpolation.map_coordinates

*****

Corrected includes in C source files.

*****

Debugging edits to figure out problem with C code.

*****

Bringing (renamed) _asymmetry.c back.

*****

Bringing _expramp.c back.

*****

Bringing _linramp.c back.

*****

Bringing _eclipse.c back.

*****

Bringing _mandeltr.c back.
This one shoulf break because there no preceeding underscore
in PyModuleDef of the file.

*****

Bringing _bilinint.c back.
Previous commit did not break...

*****

Bringing _disk.c back.

*****

Bringing _aphot.c back.
